--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
+# torch==1.8.1+cu111 
+# torchvision==0.9.1+cu111 
+# torchaudio===0.8.1 
+
 -r requirements/build.txt
 -r requirements/optional.txt
 -r requirements/runtime.txt
